# Fresh4Life

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  diesel.toml  fly.toml  schema.rs
migrations/2025-04-19-212245_users/: up.sql
migrations/2025-04-19-212324_tracks/: down.sql  up.sql
migrations/2025-04-19-212523_likes/: up.sql
migrations/2025-04-19-212535_saved_tracks/: down.sql  up.sql
migrations/2025-05-06-232756_tracks/: up.sql
migrations/2025-05-08-174312_comments/: up.sql
src/: main.rs  models.rs  schema.rs
static/: style.css
templates/: about.html  index.html  login.html  register.html  track.html  tracks.html  upload.html  user.html
