[package]
name = "Fresh4Life"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.0"
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.9", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
rocket_sync_db_pools = { version = "^0.1.0" }
bcrypt = "0.15.0"
rocket_db_pools = { version = "0.1.0-rc.2", features= ["sqlx_mysql"]}
dotenv = "0.15.0"


[default.databases.mysql_db]
url = "mysql://username:password@localhost/fresh4life"


