[package]
name = "Fresh4Life"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.0"
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.9", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
rocket-multipart-form-data = "0.10.7"


[default.databases.mysql_db]
url = "mysql://username:password@localhost/fresh4life"


